category card new visible version. hot fix sleder list paddings 1.1

--- a/src/layouts/Section/Section.scss
+++ b/src/layouts/Section/Section.scss
@@ -30,7 +30,9 @@
         }
 
         li:last-of-type {
-          padding-right: 0;
+          @include mobile {
+            padding-right: 0;
+          }
         }
       }
     }
